initial problems with js

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     </head>
     <body>
 
+        <input type="text" name="travelLenght" id="travelLenght">
+
+        <input type="text" name="userAge" id="userAge">
+
+        <button>submit</button>
+
 
         <script src="./assets/js/main.js"></script>
     </body>
