--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <input type="text" name="userAge" id="userAge">
 
-        <button>submit</button>
+        <button id="submit">submit</button>
 
 
         <script src="./assets/js/main.js"></script>
