add working calculator

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <button id="submit">submit</button>
 
 
+        <h1 id="answear"></h1>
+
+
         <script src="./assets/js/main.js"></script>
     </body>
 </html>
