--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
     <h6 class="fs-6"> Dettaglio passeggeri</h6>
     <div class="row">
         <div class="col-3 bg-secondary">
-            <p class="fw-semibold">NOME PASSEGGERO</p>
-            <p >Jhon Snow</p>
+            <p  class="fw-semibold">NOME PASSEGGERO</p>
+            <p id="userName"></p>
 
         </div>
         <!-- ticket head -->
         <div class="col-3">
             <p class="fw-semibold fs-6">Offerta</p>
 
-            <p>Biglietto Standard</p>
+            <p id="discountTipe">Biglietto Standard</p>
 
         </div>
         <!-- ticket middle -->
@@ -94,7 +94,7 @@
                     </div>
                     <div class="col">
                         <p>Costo Biglietto</p>
-                        <p>0.00€</p>
+                        <p id="finalPrice">0.00€</p>
                     </div>
                 </div>
             </div>
