--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="btn_wrapper d-flex justify-content-center">
                           <button class="btn btn-warning mx-2" id="submit">Submit</button>
                           <!-- -- -->
-                        <button class="btn btn-danger mx-2" id="submit">Reset</button>
+                        <button class="btn btn-danger mx-2" id="reset">Reset</button>
                        
 
                     </div>
@@ -93,7 +93,7 @@
                         <p>92712</p>
                     </div>
                     <div class="col">
-                        <p>Costo Biglietto</p>
+                        <p class="fw-semibold">Costo Biglietto</p>
                         <p id="finalPrice">0.00€</p>
                     </div>
                 </div>
