--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
         <title>Document</title>
     </head>
-    <body class="bg-secondary">
+    <body class="">
 
-        <h1 class="text-center fs-3 text-light">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
+        <h1 class="text-center fs-3 text-light my-5">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h1>
 
             <div class="container bg-light p-4 rounded">
                 <div class="row ">
@@ -66,10 +66,10 @@
 <div id="ticket" class="invisible container bg-light p-4 rounded mt-4">
      <!-- biglietto qui sotto -->
     <h3 class=" text-center">Il tuo biglietto</h3>
-    <h6 class="fs-6"> Dettaglio passeggeri</h6>
+    <h6 class="fs-6 my-3 text-center">Dettaglio passeggeri</h6>
     <div class="row">
-        <div class="col-3 bg-secondary">
-            <p  class="fw-semibold">NOME PASSEGGERO</p>
+        <div class="name_container col-3 rounded-2">
+            <p  class="fw-semibold mt-2">NOME PASSEGGERO</p>
             <p id="userName"></p>
 
         </div>
@@ -86,16 +86,16 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col">
-                        <p >Carrozza</p>
+                        <p class="fw-semibold">Carrozza</p>
                         <p id="carrozza">5</p>
                     </div>
                     <div class="col">
-                        <p>codice CP</p>
+                        <p class="fw-semibold">Codice CP</p>
                         <p id="cpCode">92712</p>
                     </div>
                     <div class="col">
-                        <p class="fw-semibold">Costo Biglietto</p>
-                        <p id="finalPrice">0.00€</p>
+                        <p class="fw-semibold">Prezzo</p>
+                        <p class="fw-bold" id="finalPrice">0.00€</p>
                     </div>
                 </div>
             </div>
